# farm-and-fleet-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEMO.md  Dockerfile  azure.yaml  pyproject.toml
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/app/: app.bicep
infra/core/host/: container-apps.bicep
infra/core/monitor/: monitoring.bicep
infra/core/security/: keyvault.bicep
infra/hooks/: predeployment.ps1  predeployment.sh
scripts/: setup-secrets.sh  social_media_analytics.py  social_media_content_analysis.py  social_media_upload.py  survey_analytics.py  survey_upload.py
src/: app.py  app_pydantic.py  dependencies.py  tools.py
src/.chainlit/: config.toml
src/plugins/: __init__.py
src/plugins/analytics/: __init__.py  statistical_analytics_plugin.py
src/plugins/search/: README.md  __init__.py  friction_point_search_plugin.py  search_client.py
src/plugins/sqldb/: __init__.py  database_client.py  database_plugin.py
src/plugins/sqldb/data_dictionaries/: README.md  medallia_feedback.json
src/prompts/: LLM_SYSTEM_PROMPT.md
src/public/: styles.css  theme.json
